Bug fixed installation

--- a/Presentation/Nop.Web/Views/Install/Index.cshtml
+++ b/Presentation/Nop.Web/Views/Install/Index.cshtml
@@ -56,7 +56,7 @@
 
                 @*<p>@ILS.GetResource("Tooltip1")</p>*@
                 <p>@ILS.GetResource("Tooltip2")</p>
-                <p>@ILS.GetResource("Documentation1") <a href="http://docs.nopcommerce.com/dashboard.action?utm_source=installation-page&utm_medium=footer&utm_campaign=installation-page" target="_blank">@ILS.GetResource("Documentation2")</a>.</p>
+                <p>@ILS.GetResource("Documentation1") <a href="https://github.com/alirezakhosravi/NopFramework" target="_blank">@ILS.GetResource("Documentation2")</a>.</p>
 
                 <script>
     function showThrobber(message) {
