--- a/Presentation/Nop.Web/Areas/Admin/Views/AddressAttribute/_CreateOrUpdate.Info.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/AddressAttribute/_CreateOrUpdate.Info.cshtml
@@ -1,5 +1,4 @@
-﻿@using Nop.Core.Domain.Catalog
-@using Nop.Services
+﻿@using Nop.Services
 @model AddressAttributeModel
 
 <div class="panel-group">
@@ -40,21 +39,6 @@
                 <div class="col-md-9">
                     <nop-editor asp-for="IsRequired" />
                     <span asp-validation-for="IsRequired"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-3">
-                    <nop-label asp-for="AttributeControlTypeId" />
-                </div>
-                <div class="col-md-9">
-                    @{
-                        IEnumerable<SelectListItem> attributeControlTypes = ((AttributeControlType)Model.AttributeControlTypeId)
-                            .ToSelectList(valuesToExclude:
-                                //these attributes don't support some control types
-                                new[] { (int)AttributeControlType.FileUpload, (int)AttributeControlType.Datepicker, (int)AttributeControlType.ColorSquares, (int)AttributeControlType.ImageSquares });
-                    }
-                    <nop-select asp-for="AttributeControlTypeId" asp-items="@attributeControlTypes"/>
-                    <span asp-validation-for="AttributeControlTypeId"></span>
                 </div>
             </div>
             <div class="form-group">
