--- a/Presentation/Nop.Web/Areas/Admin/Views/MessageTemplate/List.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/MessageTemplate/List.cshtml
@@ -22,16 +22,16 @@
     <div class="form-horizontal">
         <div class="panel-group">
             @*hide the entire search block if no elements are displayed*@
-            <div class="panel panel-default panel-search" @(Model.AvailableStores.SelectionIsNotPossible() ? Html.Raw("style=\"display:none\"") : null)>
+            <div class="panel panel-default panel-search" @(Model.AvailableSites.SelectionIsNotPossible() ? Html.Raw("style=\"display:none\"") : null)>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <div class="col-md-4">
-                                    <nop-label asp-for="SearchStoreId" />
+                                    <nop-label asp-for="SearchSiteId" />
                                 </div>
                                 <div class="col-md-8">
-                                    <nop-select asp-for="SearchStoreId" asp-items="Model.AvailableStores" />
+                                    <nop-select asp-for="SearchSiteId" asp-items="Model.AvailableSites" />
                                 </div>
                             </div>
                             <div class="form-group">
@@ -63,7 +63,7 @@
                                             dataType: "json",
                                             data: function() {
                                                 var data = {
-                                                    SearchStoreId: $('#SearchStoreId').val()
+                                                    SearchSiteId: $('#SearchSiteId').val()
                                                 };
                                                 addAntiForgeryToken(data);
                                                 return data;
@@ -110,8 +110,8 @@
                                         attributes: { style: "text-align:center" },
                                         template: '# if(IsActive) {# <i class="fa fa-check true-icon"></i> #} else {# <i class="fa fa-close false-icon"></i> #} #'
                                     }, {
-                                        field: "ListOfStores",
-                                        title: "@T("Admin.ContentManagement.MessageTemplates.Fields.LimitedToStores")",
+                                        field: "ListOfSites",
+                                        title: "@T("Admin.ContentManagement.MessageTemplates.Fields.LimitedToSites")",
                                         width: 300
                                     }, {
                                         field: "Id",
