--- a/Presentation/Nop.Web/Areas/Admin/Views/User/_UserAttributes.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/User/_UserAttributes.cshtml
@@ -2,7 +2,7 @@
 
 @foreach (var attribute in Model)
 {
-    var controlId = $"customer_attribute_{attribute.Id}";
+    var controlId = $"user_attribute_{attribute.Id}";
     var textPrompt = attribute.Name;
     <div class="form-group">
         <div class="col-md-3">
