--- a/Presentation/Nop.Web/Areas/Admin/Views/UserAttribute/_CreateOrUpdate.Info.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/UserAttribute/_CreateOrUpdate.Info.cshtml
@@ -1,22 +1,11 @@
 ﻿@model UserAttributeModel
 @using Nop.Services
 
-<script>
-    $(document).ready(function() {
-        $("#@Html.IdFor(model => model.AttributeControlTypeId)").change(toggleAttributeControlType);
-        toggleAttributeControlType();
-    });
-
-    function toggleAttributeControlType() {
-        var selectedAttributeControlTypeId = $("#@Html.IdFor(model => model.AttributeControlTypeId)").val();
-          
-    }
-</script>
 <div class="panel-group">
     @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.UserAttributeDetailsInfoTop, additionalData = Model })
     <div class="panel panel-default">
         <div class="panel-body">
-            @(Html.LocalizedEditor<UserAttributeModel, UserAttributeLocalizedModel>("customerattribute-localized",
+            @(Html.LocalizedEditor<UserAttributeModel, UserAttributeLocalizedModel>("userattribute-localized",
             @<div>
                 <div class="form-group">
                     <div class="col-md-3">
