--- a/Presentation/Nop.Web/Areas/Admin/Views/Plugin/List.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Plugin/List.cshtml
@@ -21,7 +21,7 @@
         <div class="form-horizontal">
             <nop-tabs id="plugins-tabs">
                 <nop-tab asp-name="tab-local-plugins" asp-title="@T("Admin.Configuration.Plugins.Local")" asp-default="true">@await Html.PartialAsync("_List.Plugins", Model.PluginsLocal)</nop-tab>
-                <nop-tab asp-name="tab-all-plugins-and-themes" asp-title="@T("Admin.Configuration.Plugins.OfficialFeed")">@await Html.PartialAsync("_List.OfficialFeed", Model.AllPluginsAndThemes)</nop-tab>
+                @*<nop-tab asp-name="tab-all-plugins-and-themes" asp-title="@T("Admin.Configuration.Plugins.OfficialFeed")">@await Html.PartialAsync("_List.OfficialFeed", Model.AllPluginsAndThemes)</nop-tab>*@
             </nop-tabs>
         </div>
     </div>
