bug fixed user-model list of activity log resources dashboard setting->user attribute setting

--- a/Presentation/Nop.Web/Areas/Admin/Views/Home/_PopularSearchTermsReport.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Home/_PopularSearchTermsReport.cshtml
@@ -6,7 +6,7 @@
 @{
     const string panelId = "popular-search-terms-box";
     const string hidePanelAttributeName = "HidePopularSearchTermsReport";
-    var hidePanel = genericAttributeService.GetAttribute<bool>(workContext.CurrentCustomer, hidePanelAttributeName);
+    var hidePanel = genericAttributeService.GetAttribute<bool>(workContext.CurrentUser, hidePanelAttributeName);
 }
 
 <div class="box box-info @if(hidePanel){<text>collapsed-box</text>}" id="@panelId">
