--- a/Presentation/Nop.Web/Areas/Admin/Views/Shared/Components/CommonStatistics/Default.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Shared/Components/CommonStatistics/Default.cshtml
@@ -5,7 +5,7 @@
 @{
     const string panelId = "nopcommerce-common-statistics-box";
     const string hidePanelAttributeName = "HideCommonStatisticsPanel";
-    var hidePanel = genericAttributeService.GetAttribute<bool>(workContext.CurrentCustomer, hidePanelAttributeName);
+    var hidePanel = genericAttributeService.GetAttribute<bool>(workContext.CurrentUser, hidePanelAttributeName);
 }
 
 <div class="box box-info @if(hidePanel){<text>collapsed-box</text>}" id="@panelId">
@@ -29,66 +29,21 @@
     </div>
     <div class="box-body">
         <div class="col-lg-3 col-xs-6">
-            <div class="small-box bg-aqua">
-                <div class="inner">
-                    <h3>@Model.NumberOfOrders</h3>
-                    <p>@T("Admin.Dashboard.NumberOfOrders")</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-bag"></i>
-                </div>
-                <a asp-controller="Order" asp-action="List" class="small-box-footer">
-                    @T("Admin.Dashboard.MoreInfo")
-                    <i class="fa fa-arrow-circle-right"></i>
-                </a>
-            </div>
-        </div>
-        <div class="col-lg-3 col-xs-6">
-            <div class="small-box bg-yellow">
-                <div class="inner">
-                    <h3>@Model.NumberOfPendingReturnRequests</h3>
-                    <p>@T("Admin.Dashboard.NumberOfPendingReturnRequests")</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-refresh"></i>
-                </div>
-                <a asp-controller="ReturnRequest" asp-action="List" class="small-box-footer">
-                    @T("Admin.Dashboard.MoreInfo")
-                    <i class="fa fa-arrow-circle-right"></i>
-                </a>
-            </div>
-        </div>
-        <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-green">
                 <div class="inner">
-                    <h3>@Model.NumberOfCustomers</h3>
-                    <p>@T("Admin.Dashboard.NumberOfCustomers")</p>
+                    <h3>@Model.NumberOfUsers</h3>
+                    <p>@T("Admin.Dashboard.NumberOfUsers")</p>
                 </div>
                 <div class="icon">
                     <i class="ion ion-person-add"></i>
                 </div>
-                <a asp-controller="Customer" asp-action="List" class="small-box-footer">
+                <a asp-controller="User" asp-action="List" class="small-box-footer">
                     @T("Admin.Dashboard.MoreInfo")
                     <i class="fa fa-arrow-circle-right"></i>
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-xs-6">
-            <div class="small-box bg-red">
-                <div class="inner">
-                    <h3>@Model.NumberOfLowStockProducts</h3>
-                    <p>@T("Admin.Dashboard.NumberOfLowStockProducts")</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-pie-graph"></i>
-                </div>
-                <a asp-controller="Report" asp-action="LowStock" class="small-box-footer">
-                    @T("Admin.Dashboard.MoreInfo")
-                    <i class="fa fa-arrow-circle-right"></i>
-                </a>
-            </div>
-        </div>
-
+       
         <script>
             $(document).ready(function () {
                 $('#@panelId').on('click', 'button[data-widget="collapse"]', function () {
