--- a/Presentation/Nop.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -6,8 +6,6 @@
 
     //page title
     ViewBag.Title = T("Admin.Dashboard").Text;
-
-    var canManageReturnRequests = permissionService.Authorize(StandardPermissionProvider.ManageReturnRequests);
 }
 <nop-antiforgery-token />
 <div class="content-header">
@@ -19,9 +17,19 @@
     <div class="row">
         <div class="col-md-12">
             @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardTop })
-            @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardOrderreportsAfter })
-            @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardLatestordersSearchtermsAfter })
-            @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardBottom })
+            <div class="row">
+                <div class="col-md-12">
+                    @await Component.InvokeAsync("CommonStatistics")
+                </div>
+            </div>
+            @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardCommonstatisticsAfter })
+            <div class="col-md-6">
+                @await Html.PartialAsync("_UserStatistics")
+            </div>
+            <div class="col-md-6">
+                @await Html.PartialAsync("_PopularSearchTermsReport", Model.PopularSearchTerms)
+            </div>
         </div>
+        @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardBottom })
     </div>
 </div>
