--- a/Presentation/Nop.Web/Views/Shared/_ColumnsOne.cshtml
+++ b/Presentation/Nop.Web/Views/Shared/_ColumnsOne.cshtml
@@ -4,7 +4,7 @@
 @if (IsSectionDefined("Breadcrumb"))
 {
     @section Breadcrumb {
-        @@RenderSection("Breadcrumb")
+        @RenderSection("Breadcrumb")
     }
 }
 <div class="center-1">
