--- a/Presentation/Nop.Web/Views/User/ChangePassword.cshtml
+++ b/Presentation/Nop.Web/Views/User/ChangePassword.cshtml
@@ -10,7 +10,7 @@
 }
 @section left
 {
-    @await Component.InvokeAsync("CustomerNavigation", new { selectedTabId = CustomerNavigationEnum.ChangePassword })
+    @await Component.InvokeAsync("UserNavigation", new { selectedTabId = UserNavigationEnum.ChangePassword })
 }
 
 <div class="page account-page change-password-page">
@@ -24,7 +24,7 @@
                 @Model.Result
             </div>
         }
-        <form asp-route="CustomerChangePassword" method="post">
+        <form asp-route="UserChangePassword" method="post">
             <div asp-validation-summary="ModelOnly" class="message-error"></div>
             <div class="fieldset">
                 <div class="form-fields">
