--- a/Presentation/Nop.Web/Views/User/AddressAdd.cshtml
+++ b/Presentation/Nop.Web/Views/User/AddressAdd.cshtml
@@ -1,4 +1,4 @@
-﻿@model CustomerAddressEditModel
+﻿@model UserAddressEditModel
 @{
     Layout = "_ColumnsTwo";
 
@@ -10,12 +10,12 @@
 }
 @section left
 {
-    @await Component.InvokeAsync("CustomerNavigation", new { selectedTabId = CustomerNavigationEnum.Addresses })
+    @await Component.InvokeAsync("UserNavigation", new { selectedTabId = UserNavigationEnum.Addresses })
 }
-<form asp-route="CustomerAddressAdd" method="post">
+<form asp-route="UserAddressAdd" method="post">
     <div class="page account-page address-edit-page">
         <div class="page-title">
-            <h1>@T("Account.MyAccount") - @T("Account.CustomerAddresses.AddNew")</h1>
+            <h1>@T("Account.MyAccount") - @T("Account.UserAddresses.AddNew")</h1>
         </div>
         <div class="page-body">
             <div asp-validation-summary="ModelOnly" class="message-error"></div>
