--- a/Presentation/Nop.Web/Views/Shared/Components/TopMenu/Default.cshtml
+++ b/Presentation/Nop.Web/Views/Shared/Components/TopMenu/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model TopMenuModel
+﻿@*@model TopMenuModel
 
 @if (Model == null) { return; }
 
@@ -38,4 +38,4 @@
             });
         });
     </script>
-}
+}*@
